--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "mongoose": "^5.9.10",
     "multer": "^1.4.2",
     "nodemon": "^2.0.3"
+  },
+  "scripts": {
+    "dev": "nodemon server.js"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
